# ilias-donwloader

./: .gitignore  README.md  courses.json  pyproject.toml  test_werkstatt.ipynb
ilias_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ilias_scraper/: auth.py  scraper.py
